split lazyframe and dataframe subsections [skip ci]

--- a/altdoc/mkdocs.yml
+++ b/altdoc/mkdocs.yml
@@ -58,134 +58,152 @@ nav:
         - About series: about_series_functions.md
         - to_r_vector: man/series__to_r_vector.md
       DataFrame:
-        - bottom_k: man/dataframe__bottom_k.md
-        - cast: man/dataframe__cast.md
-        - clear: man/dataframe__clear.md
-        - clone: man/dataframe__clone.md
-        - count: man/dataframe__count.md
-        - describe: man/dataframe__describe.md
-        - drop_nans: man/dataframe__drop_nans.md
-        - drop_nulls: man/dataframe__drop_nulls.md
-        - drop: man/dataframe__drop.md
-        - equals: man/dataframe__equals.md
-        - explode: man/dataframe__explode.md
-        - fill_nan: man/dataframe__fill_nan.md
-        - fill_null: man/dataframe__fill_null.md
-        - filter: man/dataframe__filter.md
-        - gather_every: man/dataframe__gather_every.md
-        - get_column_index: man/dataframe__get_column_index.md
-        - get_column: man/dataframe__get_column.md
-        - get_columns: man/dataframe__get_columns.md
-        - glimpse: man/dataframe__glimpse.md
-        - group_by_dynamic: man/dataframe__group_by_dynamic.md
-        - group_by: man/dataframe__group_by.md
-        - hash_rows: man/dataframe__hash_rows.md
-        - head: man/dataframe__head.md
-        - is_duplicated: man/dataframe__is_duplicated.md
-        - is_empty: man/dataframe__is_empty.md
-        - is_unique: man/dataframe__is_unique.md
-        - join_asof: man/dataframe__join_asof.md
-        - join_where: man/dataframe__join_where.md
-        - join: man/dataframe__join.md
-        - lazy: man/dataframe__lazy.md
-        - max_horizontal: man/dataframe__max_horizontal.md
-        - max: man/dataframe__max.md
-        - mean_horizontal: man/dataframe__mean_horizontal.md
-        - mean: man/dataframe__mean.md
-        - median: man/dataframe__median.md
-        - merge_sorted: man/dataframe__merge_sorted.md
-        - min_horizontal: man/dataframe__min_horizontal.md
-        - min: man/dataframe__min.md
-        - n_chunks: man/dataframe__n_chunks.md
-        - partition_by: man/dataframe__partition_by.md
-        - pivot: man/dataframe__pivot.md
-        - quantile: man/dataframe__quantile.md
-        - rechunk: man/dataframe__rechunk.md
-        - rename: man/dataframe__rename.md
-        - reverse: man/dataframe__reverse.md
-        - rolling: man/dataframe__rolling.md
-        - sample: man/dataframe__sample.md
-        - select_seq: man/dataframe__select_seq.md
-        - select: man/dataframe__select.md
-        - set_sorted: man/dataframe__set_sorted.md
-        - shift: man/dataframe__shift.md
-        - slice: man/dataframe__slice.md
-        - sort: man/dataframe__sort.md
-        - std: man/dataframe__std.md
-        - sum_horizontal: man/dataframe__sum_horizontal.md
-        - sum: man/dataframe__sum.md
-        - tail: man/dataframe__tail.md
-        - to_dummies: man/dataframe__to_dummies.md
-        - to_series: man/dataframe__to_series.md
-        - to_struct: man/dataframe__to_struct.md
-        - top_k: man/dataframe__top_k.md
-        - transpose: man/dataframe__transpose.md
-        - unique: man/dataframe__unique.md
-        - unnest: man/dataframe__unnest.md
-        - unpivot: man/dataframe__unpivot.md
-        - unstack: man/dataframe__unstack.md
-        - var: man/dataframe__var.md
-        - with_columns_seq: man/dataframe__with_columns_seq.md
-        - with_columns: man/dataframe__with_columns.md
-        - with_row_index: man/dataframe__with_row_index.md
+        - Aggregation:
+            - count: man/dataframe__count.md
+            - max_horizontal: man/dataframe__max_horizontal.md
+            - max: man/dataframe__max.md
+            - mean_horizontal: man/dataframe__mean_horizontal.md
+            - mean: man/dataframe__mean.md
+            - median: man/dataframe__median.md
+            - min_horizontal: man/dataframe__min_horizontal.md
+            - min: man/dataframe__min.md
+            - quantile: man/dataframe__quantile.md
+            - std: man/dataframe__std.md
+            - sum_horizontal: man/dataframe__sum_horizontal.md
+            - sum: man/dataframe__sum.md
+            - var: man/dataframe__var.md
+        - Computation:
+            - hash_rows: man/dataframe__hash_rows.md
+        - Descriptive:
+            - describe: man/dataframe__describe.md
+            - glimpse: man/dataframe__glimpse.md
+            - is_duplicated: man/dataframe__is_duplicated.md
+            - is_empty: man/dataframe__is_empty.md
+            - is_unique: man/dataframe__is_unique.md
+            - n_chunks: man/dataframe__n_chunks.md
+        - GroupBy:
+            - agg: man/groupby__agg.md
+            - head: man/groupby__head.md
+            - tail: man/groupby__tail.md
+        - Manipulation/Selection:
+          - bottom_k: man/dataframe__bottom_k.md
+          - cast: man/dataframe__cast.md
+          - clear: man/dataframe__clear.md
+          - clone: man/dataframe__clone.md
+          - drop_nans: man/dataframe__drop_nans.md
+          - drop_nulls: man/dataframe__drop_nulls.md
+          - drop: man/dataframe__drop.md
+          - explode: man/dataframe__explode.md
+          - fill_nan: man/dataframe__fill_nan.md
+          - fill_null: man/dataframe__fill_null.md
+          - filter: man/dataframe__filter.md
+          - gather_every: man/dataframe__gather_every.md
+          - get_column_index: man/dataframe__get_column_index.md
+          - get_column: man/dataframe__get_column.md
+          - get_columns: man/dataframe__get_columns.md
+          - group_by_dynamic: man/dataframe__group_by_dynamic.md
+          - group_by: man/dataframe__group_by.md
+          - head: man/dataframe__head.md
+          - join_asof: man/dataframe__join_asof.md
+          - join_where: man/dataframe__join_where.md
+          - join: man/dataframe__join.md
+          - merge_sorted: man/dataframe__merge_sorted.md
+          - partition_by: man/dataframe__partition_by.md
+          - pivot: man/dataframe__pivot.md
+          - rechunk: man/dataframe__rechunk.md
+          - rename: man/dataframe__rename.md
+          - reverse: man/dataframe__reverse.md
+          - rolling: man/dataframe__rolling.md
+          - sample: man/dataframe__sample.md
+          - select_seq: man/dataframe__select_seq.md
+          - select: man/dataframe__select.md
+          - set_sorted: man/dataframe__set_sorted.md
+          - shift: man/dataframe__shift.md
+          - slice: man/dataframe__slice.md
+          - sort: man/dataframe__sort.md
+          - tail: man/dataframe__tail.md
+          - to_dummies: man/dataframe__to_dummies.md
+          - to_series: man/dataframe__to_series.md
+          - to_struct: man/dataframe__to_struct.md
+          - top_k: man/dataframe__top_k.md
+          - transpose: man/dataframe__transpose.md
+          - unique: man/dataframe__unique.md
+          - unnest: man/dataframe__unnest.md
+          - unpivot: man/dataframe__unpivot.md
+          - unstack: man/dataframe__unstack.md
+          - with_columns_seq: man/dataframe__with_columns_seq.md
+          - with_columns: man/dataframe__with_columns.md
+          - with_row_index: man/dataframe__with_row_index.md
+        - Misc:
+          - equals: man/dataframe__equals.md
+          - lazy: man/dataframe__lazy.md
       LazyFrame:
-        - bottom_k: man/lazyframe__bottom_k.md
-        - cast: man/lazyframe__cast.md
-        - clear: man/lazyframe__clear.md
-        - clone: man/lazyframe__clone.md
-        - collect_schema: man/lazyframe__collect_schema.md
-        - collect: man/lazyframe__collect.md
-        - count: man/lazyframe__count.md
-        - describe: man/lazyframe__describe.md
-        - drop_nans: man/lazyframe__drop_nans.md
-        - drop_nulls: man/lazyframe__drop_nulls.md
-        - drop: man/lazyframe__drop.md
-        - explain: man/lazyframe__explain.md
-        - explode: man/lazyframe__explode.md
-        - fill_nan: man/lazyframe__fill_nan.md
-        - fill_null: man/lazyframe__fill_null.md
-        - filter: man/lazyframe__filter.md
-        - first: man/lazyframe__first.md
-        - gather_every: man/lazyframe__gather_every.md
-        - group_by_dynamic: man/lazyframe__group_by_dynamic.md
-        - group_by: man/lazyframe__group_by.md
-        - head: man/lazyframe__head.md
-        - interpolate: man/lazyframe__interpolate.md
-        - join_asof: man/lazyframe__join_asof.md
-        - join_where: man/lazyframe__join_where.md
-        - join: man/lazyframe__join.md
-        - last: man/lazyframe__last.md
-        - max: man/lazyframe__max.md
-        - mean: man/lazyframe__mean.md
-        - median: man/lazyframe__median.md
-        - merge_sorted: man/lazyframe__merge_sorted.md
-        - min: man/lazyframe__min.md
-        - null_count: man/lazyframe__null_count.md
-        - profile: man/lazyframe__profile.md
-        - quantile: man/lazyframe__quantile.md
-        - rename: man/lazyframe__rename.md
-        - reverse: man/lazyframe__reverse.md
-        - rolling: man/lazyframe__rolling.md
-        - select_seq: man/lazyframe__select_seq.md
-        - select: man/lazyframe__select.md
-        - serialize: man/lazyframe__serialize.md
-        - set_sorted: man/lazyframe__set_sorted.md
-        - shift: man/lazyframe__shift.md
-        - slice: man/lazyframe__slice.md
-        - sort: man/lazyframe__sort.md
-        - sql: man/lazyframe__sql.md
-        - std: man/lazyframe__std.md
-        - sum: man/lazyframe__sum.md
-        - tail: man/lazyframe__tail.md
-        - to_dot: man/lazyframe__to_dot.md
-        - top_k: man/lazyframe__top_k.md
-        - unique: man/lazyframe__unique.md
-        - unnest: man/lazyframe__unnest.md
-        - unpivot: man/lazyframe__unpivot.md
-        - var: man/lazyframe__var.md
-        - with_columns_seq: man/lazyframe__with_columns_seq.md
-        - with_columns: man/lazyframe__with_columns.md
-        - with_row_index: man/lazyframe__with_row_index.md
+        - Aggregation:
+            - count: man/lazyframe__count.md
+            - max: man/lazyframe__max.md
+            - mean: man/lazyframe__mean.md
+            - median: man/lazyframe__median.md
+            - min: man/lazyframe__min.md
+            - null_count: man/lazyframe__null_count.md
+            - quantile: man/lazyframe__quantile.md
+            - std: man/lazyframe__std.md
+            - sum: man/lazyframe__sum.md
+            - var: man/lazyframe__var.md
+        - Descriptive:
+          - describe: man/lazyframe__describe.md
+          - explain: man/lazyframe__explain.md
+        - GroupBy:
+            - agg: man/lazygroupby__agg.md
+            - head: man/lazygroupby__head.md
+            - tail: man/lazygroupby__tail.md
+        - Manipulation/Selection:
+          - bottom_k: man/lazyframe__bottom_k.md
+          - cast: man/lazyframe__cast.md
+          - clear: man/lazyframe__clear.md
+          - clone: man/lazyframe__clone.md
+          - drop_nans: man/lazyframe__drop_nans.md
+          - drop_nulls: man/lazyframe__drop_nulls.md
+          - drop: man/lazyframe__drop.md
+          - explode: man/lazyframe__explode.md
+          - fill_nan: man/lazyframe__fill_nan.md
+          - fill_null: man/lazyframe__fill_null.md
+          - filter: man/lazyframe__filter.md
+          - first: man/lazyframe__first.md
+          - gather_every: man/lazyframe__gather_every.md
+          - group_by_dynamic: man/lazyframe__group_by_dynamic.md
+          - group_by: man/lazyframe__group_by.md
+          - head: man/lazyframe__head.md
+          - interpolate: man/lazyframe__interpolate.md
+          - join_asof: man/lazyframe__join_asof.md
+          - join_where: man/lazyframe__join_where.md
+          - join: man/lazyframe__join.md
+          - last: man/lazyframe__last.md
+          - merge_sorted: man/lazyframe__merge_sorted.md
+          - quantile: man/lazyframe__quantile.md
+          - rename: man/lazyframe__rename.md
+          - reverse: man/lazyframe__reverse.md
+          - rolling: man/lazyframe__rolling.md
+          - select_seq: man/lazyframe__select_seq.md
+          - select: man/lazyframe__select.md
+          - set_sorted: man/lazyframe__set_sorted.md
+          - shift: man/lazyframe__shift.md
+          - slice: man/lazyframe__slice.md
+          - sort: man/lazyframe__sort.md
+          - sql: man/lazyframe__sql.md
+          - tail: man/lazyframe__tail.md
+          - to_dot: man/lazyframe__to_dot.md
+          - top_k: man/lazyframe__top_k.md
+          - unique: man/lazyframe__unique.md
+          - unnest: man/lazyframe__unnest.md
+          - unpivot: man/lazyframe__unpivot.md
+          - with_columns_seq: man/lazyframe__with_columns_seq.md
+          - with_columns: man/lazyframe__with_columns.md
+          - with_row_index: man/lazyframe__with_row_index.md
+        - Misc:
+          - collect: man/lazyframe__collect.md
+          - collect_schema: man/lazyframe__collect_schema.md
+          - profile: man/lazyframe__profile.md
+          - serialize: man/lazyframe__serialize.md
       Expressions:
         - All others:
             - abs: man/expr__abs.md
