--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -9,6 +9,8 @@ vars:
   REQUIRED_R_PKGS_FOR_S3_METHODS: nanoarrow,tibble
 
   VENV_DIR: .venv_altdoc
+  VENV_BIN:
+    sh: echo '{{.VENV_DIR}}/{{if eq OS "windows"}}Scripts{{else}}bin{{end}}'
 
   MANIFEST: src/rust/Cargo.toml
   CARGO_LOCK: src/rust/Cargo.lock
