perf: Use custom `$` S3 methods for series namespaces

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,13 @@ S3method("$",polars_namespace_expr_meta)
 S3method("$",polars_namespace_expr_name)
 S3method("$",polars_namespace_expr_str)
 S3method("$",polars_namespace_expr_struct)
+S3method("$",polars_namespace_series_arr)
+S3method("$",polars_namespace_series_bin)
+S3method("$",polars_namespace_series_cat)
+S3method("$",polars_namespace_series_dt)
+S3method("$",polars_namespace_series_list)
+S3method("$",polars_namespace_series_str)
+S3method("$",polars_namespace_series_struct)
 S3method("$",polars_object)
 S3method("$",polars_rolling_group_by)
 S3method("$",polars_series)
@@ -170,6 +177,13 @@ S3method(utils::.DollarNames,polars_namespace_expr_meta)
 S3method(utils::.DollarNames,polars_namespace_expr_name)
 S3method(utils::.DollarNames,polars_namespace_expr_str)
 S3method(utils::.DollarNames,polars_namespace_expr_struct)
+S3method(utils::.DollarNames,polars_namespace_series_arr)
+S3method(utils::.DollarNames,polars_namespace_series_bin)
+S3method(utils::.DollarNames,polars_namespace_series_cat)
+S3method(utils::.DollarNames,polars_namespace_series_dt)
+S3method(utils::.DollarNames,polars_namespace_series_list)
+S3method(utils::.DollarNames,polars_namespace_series_str)
+S3method(utils::.DollarNames,polars_namespace_series_struct)
 S3method(utils::.DollarNames,polars_rolling_group_by)
 S3method(utils::.DollarNames,polars_series)
 S3method(utils::.DollarNames,polars_sql_context)
