--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,15 @@ S3method("$",polars_group_by)
 S3method("$",polars_group_by_dynamic)
 S3method("$",polars_lazy_frame)
 S3method("$",polars_lazy_group_by)
+S3method("$",polars_namespace_expr_arr)
+S3method("$",polars_namespace_expr_bin)
+S3method("$",polars_namespace_expr_cat)
+S3method("$",polars_namespace_expr_dt)
+S3method("$",polars_namespace_expr_list)
+S3method("$",polars_namespace_expr_meta)
+S3method("$",polars_namespace_expr_name)
+S3method("$",polars_namespace_expr_str)
+S3method("$",polars_namespace_expr_struct)
 S3method("$",polars_object)
 S3method("$",polars_rolling_group_by)
 S3method("$",polars_series)
@@ -152,6 +161,15 @@ S3method(utils::.DollarNames,polars_group_by)
 S3method(utils::.DollarNames,polars_group_by_dynamic)
 S3method(utils::.DollarNames,polars_lazy_frame)
 S3method(utils::.DollarNames,polars_lazy_group_by)
+S3method(utils::.DollarNames,polars_namespace_expr_arr)
+S3method(utils::.DollarNames,polars_namespace_expr_bin)
+S3method(utils::.DollarNames,polars_namespace_expr_cat)
+S3method(utils::.DollarNames,polars_namespace_expr_dt)
+S3method(utils::.DollarNames,polars_namespace_expr_list)
+S3method(utils::.DollarNames,polars_namespace_expr_meta)
+S3method(utils::.DollarNames,polars_namespace_expr_name)
+S3method(utils::.DollarNames,polars_namespace_expr_str)
+S3method(utils::.DollarNames,polars_namespace_expr_struct)
 S3method(utils::.DollarNames,polars_rolling_group_by)
 S3method(utils::.DollarNames,polars_series)
 S3method(utils::.DollarNames,polars_sql_context)
