--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,8 +55,9 @@ S3method(">",polars_expr)
 S3method(">",polars_series)
 S3method(">=",polars_expr)
 S3method(">=",polars_series)
+S3method("[",polars_namespace_expr_struct)
+S3method("[",polars_namespace_series_struct)
 S3method("[",polars_object)
-S3method("[",polars_struct_namespace)
 S3method("[<-",polars_object)
 S3method("[[<-",polars_object)
 S3method("[[<-",savvy_neopolars__sealed)
