--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,7 @@ Suggests:
     tibble,
     vctrs,
     withr
+Remotes: etiennebacher/altdoc
 Additional_repositories: https://community.r-multiverse.org
 Config/Needs/dev: devtools, lifecycle, readr, glue
 Config/Needs/website: altdoc, future.apply
