--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,10 +34,9 @@ Suggests:
     tibble,
     vctrs,
     withr
-Remotes: etiennebacher/altdoc
 Additional_repositories: https://community.r-multiverse.org
 Config/Needs/dev: devtools, lifecycle, readr, glue
-Config/Needs/website: altdoc, future.apply
+Config/Needs/website: etiennebacher/altdoc, future.apply
 Config/testthat/edition: 3
 Config/testthat/parallel: true
 Config/testthat/start-first: lazyframe-frame, expr-expr, expr-*
