--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -12,7 +12,9 @@
 ^src/Makevars$
 ^src/Makevars\.win$
 ^src/rust/\.cargo$
+^src/rust/rust-toolchain\.toml$
 ^src/rust/target$
+^bootstrap\.R$
 ^README\.Rmd$
 ^DEVELOPMENT\.md$
 ^\.mega-linter\.yml$
