--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -12,6 +12,7 @@
 ^src/Makevars$
 ^src/Makevars\.win$
 ^src/rust/\.cargo$
+^src/rust-toolchain\.toml$
 ^src/rust/rust-toolchain\.toml$
 ^src/rust/target$
 ^bootstrap\.R$
