--- a/.github/workflows/build-wasm.yml
+++ b/.github/workflows/build-wasm.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Copy rust-toolchain.toml
+        # r-wasm/actions/build-rwasm@main does not execute the bootstrap.R script
+        run: |
+          cp src/rust/rust-toolchain.toml src/rust-toolchain.toml
       - name: Build wasm package
         uses: r-wasm/actions/build-rwasm@main
         with:
