--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -98,11 +98,12 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "src/rust -> target"
-          shared-key: ${{ steps.rust-target.outputs.TARGET }}-debug
+          shared-key: ${{ steps.rust-target.outputs.TARGET }}-debug-nightly
 
       - name: Build lib
         env:
           LIBR_POLARS_BUILD: "true"
+          LIBR_POLARS_FEATURES: nightly
         run: |
           # make sure savvy is built from source because rust-cache doesn't work well.
           (find ~/.cargo/registry/ src/rust/target -name 'savvy-*' -print0 | xargs -0 rm -rf) || true
@@ -112,6 +113,7 @@ jobs:
         id: install-package
         env:
           DEBUG: "true"
+          LIBR_POLARS_FEATURES: nightly
         run: |
           R CMD INSTALL --no-multiarch --with-keep.source .
 
