--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -34,7 +34,7 @@ $(STATLIB): remove-prev
 	    export CFLAGS="$(CFLAGS)" && \
 	    export CARGO_PROFILE_DEV_PANIC="abort" && \
 	    export CARGO_PROFILE_RELEASE_PANIC="abort" && \
-	    cargo build $(CARGO_BUILD_ARGS); \
+	    cargo build $(CARGO_BUILD_ARGS) -Zbuild-std=panic_abort,std; \
 	  fi
 
 .PHONY: remove-prev
