--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -15,6 +15,7 @@ vars:
   R_TESTS: tests/*
   VIGNETTES: vignettes/**/*.Rmd
   RUST_SOURCE: src/rust/src/**/*.rs
+  RUST_TOOLCHAIN_CONFIG: src/rust/rust-toolchain.toml
   MAKEVARS_IN: src/Makevars{{if eq OS "windows"}}.win{{end}}.in
 
   R_FUNC_LOAD_REQUIRED_PKGS:
@@ -59,6 +60,7 @@ tasks:
       - "{{.MANIFEST}}"
       - "{{.CARGO_LOCK}}"
       - "{{.RUST_SOURCE}}"
+      - "{{.RUST_TOOLCHAIN_CONFIG}}"
     generates:
       - R/000-wrappers.R
     deps:
@@ -138,6 +140,7 @@ tasks:
       - "{{.MANIFEST}}"
       - "{{.CARGO_LOCK}}"
       - "{{.RUST_SOURCE}}"
+      - "{{.RUST_TOOLCHAIN_CONFIG}}"
     cmds:
       - Rscript -e 'devtools::test()'
 
@@ -152,6 +155,7 @@ tasks:
       - "{{.MANIFEST}}"
       - "{{.CARGO_LOCK}}"
       - "{{.RUST_SOURCE}}"
+      - "{{.RUST_TOOLCHAIN_CONFIG}}"
     generates:
       - README.md
     deps:
@@ -171,6 +175,7 @@ tasks:
       - "{{.MANIFEST}}"
       - "{{.CARGO_LOCK}}"
       - "{{.RUST_SOURCE}}"
+      - "{{.RUST_TOOLCHAIN_CONFIG}}"
     deps:
       - build-documents
     cmds:
@@ -213,16 +218,17 @@ tasks:
 
   format-rust:
     desc: Format Rust files.
-    # TODO: use the rust-toolchain.toml file
+    dir: src/rust
     aliases:
       - fmt-rust
     sources:
       - "{{.RUST_SOURCE}}"
+      - "{{.RUST_TOOLCHAIN_CONFIG}}"
       - "{{.MANIFEST}}"
     generates:
       - "{{.RUST_SOURCE}}"
     cmds:
-      - cargo fmt --all --manifest-path {{.MANIFEST}}
+      - cargo fmt --all
 
   format-devscripts:
     desc: Format dev scripts.
