--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ S3method(">=",polars_series)
 S3method("[",polars_namespace_expr_struct)
 S3method("[",polars_namespace_series_struct)
 S3method("[",polars_object)
+S3method("[",polars_series)
 S3method("[<-",polars_object)
 S3method("[[<-",polars_object)
 S3method("[[<-",savvy_neopolars__sealed)
@@ -138,6 +139,10 @@ S3method(infer_polars_dtype,vctrs_vctr)
 S3method(length,polars_data_frame)
 S3method(length,polars_lazy_frame)
 S3method(length,polars_series)
+S3method(max,polars_series)
+S3method(mean,polars_series)
+S3method(median,polars_series)
+S3method(min,polars_series)
 S3method(names,polars_data_frame)
 S3method(names,polars_lazy_frame)
 S3method(parse_as_duration_string,character)
@@ -162,6 +167,7 @@ S3method(print,polars_info)
 S3method(print,polars_lazy_frame)
 S3method(print,polars_object)
 S3method(print,polars_series)
+S3method(sum,polars_series)
 S3method(utils::.DollarNames,polars_data_frame)
 S3method(utils::.DollarNames,polars_dtype)
 S3method(utils::.DollarNames,polars_dtype_enum)
