Revert "ci: disable nightly feature"
This reverts commit ebb0927bd52ebe670cd81d12e8b31bfd1b784412.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -103,7 +103,7 @@ jobs:
       - name: Build lib
         env:
           LIBR_POLARS_BUILD: "true"
-          LIBR_POLARS_FEATURES: "" # TODO: change to nightly
+          LIBR_POLARS_FEATURES: nightly
         run: |
           # make sure savvy is built from source because rust-cache doesn't work well.
           (find ~/.cargo/registry/ src/rust/target -name 'savvy-*' -print0 | xargs -0 rm -rf) || true
@@ -113,7 +113,7 @@ jobs:
         id: install-package
         env:
           DEBUG: "true"
-          LIBR_POLARS_FEATURES: "" # TODO: change to nightly
+          LIBR_POLARS_FEATURES: nightly
         run: |
           R CMD INSTALL --no-multiarch --with-keep.source .
 
