--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -98,7 +98,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "src/rust -> target"
-          shared-key: ${{ steps.rust-target.outputs.TARGET }}-debug-nightly
+          shared-key: ${{ steps.rust-target.outputs.TARGET }}-release-nightly # TODO: change to debug
 
       - name: Build lib
         env:
