Revert "ci: fix shared key of rust cache"
This reverts commit 8274816bd57922184d4f09e6b21bd130e8108941.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -98,7 +98,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: "src/rust -> target"
-          shared-key: ${{ steps.rust-target.outputs.TARGET }}-release-nightly # TODO: change to debug
+          shared-key: ${{ steps.rust-target.outputs.TARGET }}-debug-nightly
 
       - name: Build lib
         env:
