--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ S3method(as_polars_series,vctrs_rcrd)
 S3method(as_polars_series,vctrs_unspecified)
 S3method(dim,polars_data_frame)
 S3method(dim,polars_lazy_frame)
+S3method(format,polars_dtype)
 S3method(infer_polars_dtype,"NULL")
 S3method(infer_polars_dtype,ArrowTabular)
 S3method(infer_polars_dtype,AsIs)
