--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -5,14 +5,14 @@ on:
     branches:
       - main
     paths:
-      - .github/workflows/check-docs.yaml
+      - .github/workflows/check-docs.yml
       - altdoc/mkdocs.yml
       - man/**
   pull_request:
     branches:
       - main
     paths:
-      - .github/workflows/check-docs.yaml
+      - .github/workflows/check-docs.yml
       - altdoc/mkdocs.yml
       - man/**
   workflow_dispatch:
