ci: Run `cargo clippy` on GitHub Actions

--- a/.github/workflows/lint-rust.yml
+++ b/.github/workflows/lint-rust.yml
@@ -20,6 +20,9 @@ concurrency:
 permissions:
   contents: read
 
+env:
+  RUSTFLAGS: -C debuginfo=0
+
 jobs:
   cargo-fmt:
     runs-on: ubuntu-latest
@@ -31,3 +34,30 @@ jobs:
         run: |
           rustup component add rustfmt
           cargo fmt --all --check
+
+  cargo-clippy:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Cache Rust
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "src/rust -> target"
+
+      - name: Fix cache
+        run: |
+          # make sure savvy is built from source because rust-cache doesn't work well.
+          (find ~/.cargo/registry/ src/rust/target -name 'savvy-*' -print0 | xargs -0 rm -rf) || true
+
+      - name: Run cargo clippy
+        working-directory: src/rust
+        run: |
+          rustup component add clippy
+          cargo clippy \
+            --all-targets \
+            --all-features \
+            --locked \
+            -- \
+            -D warnings \
+            -D clippy::dbg_macro
