--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,7 @@ S3method(print,polars_expr)
 S3method(print,polars_info)
 S3method(print,polars_lazy_frame)
 S3method(print,polars_object)
+S3method(print,polars_options)
 S3method(print,polars_series)
 S3method(utils::.DollarNames,polars_data_frame)
 S3method(utils::.DollarNames,polars_dtype)
@@ -227,6 +228,8 @@ export(is_polars_series)
 export(parquet_statistics)
 export(pl)
 export(polars_info)
+export(polars_options)
+export(polars_options_reset)
 import(rlang)
 importFrom(utils,findMatches)
 importFrom(utils,head)
