--- a/altdoc/mkdocs.yml
+++ b/altdoc/mkdocs.yml
@@ -719,6 +719,7 @@ nav:
         - neopolars-package: man/neopolars-package.md
         - pl: man/pl.md
         - polars_duration_string: man/polars_duration_string.md
+        - polars_options: man/polars_options.md
         - show_versions: man/pl__show_versions.md
   - About: about.md
   - Changelog: NEWS.md
