--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,7 @@ Suggests:
     withr
 Additional_repositories: https://community.r-multiverse.org
 Config/Needs/dev: devtools, lifecycle, readr, glue
+Config/Needs/lint: fs, lintr
 Config/Needs/website: etiennebacher/altdoc, future.apply
 Config/testthat/edition: 3
 Config/testthat/parallel: true
