--- a/.github/workflows/lint-r.yml
+++ b/.github/workflows/lint-r.yml
@@ -22,6 +22,11 @@ concurrency:
 permissions:
   contents: read
 
+env:
+  GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+  R_KEEP_PKG_SOURCE: yes
+  NOT_CRAN: "true"
+
 jobs:
   air-format:
     runs-on: ubuntu-latest
@@ -33,3 +38,60 @@ jobs:
 
       - name: Run air format
         run: air format --check .
+
+  lintr-lint-package:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+          Ncpus: "2"
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          needs: lint
+          extra-packages: any::pkgload
+          cache: always
+
+      - id: rust-target
+        name: Set Rust target
+        run: |
+          echo "TARGET=$(rustc -vV | grep host | cut -d' ' -f2)" >>"$GITHUB_OUTPUT"
+
+      - uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "src/rust -> target"
+          shared-key: ${{ steps.rust-target.outputs.TARGET }}-debug-nightly
+
+      - name: Build lib
+        env:
+          LIBR_POLARS_BUILD: "true"
+          LIBR_POLARS_FEATURES: nightly
+        run: |
+          # make sure savvy is built from source because rust-cache doesn't work well.
+          (find ~/.cargo/registry/ src/rust/target -name 'savvy-*' -print0 | xargs -0 rm -rf) || true
+          Rscript -e "pkgbuild::compile_dll(debug = TRUE)"
+
+      - name: lintr version
+        id: lintr-version
+        run: |
+          version=$(Rscript -e 'packageVersion("lintr") |> as.character() |> cat()')
+          echo "version=$version" >>"$GITHUB_OUTPUT"
+
+      - name: Cache lintr
+        id: cache-lintr
+        uses: actions/cache@v4
+        with:
+          path: .cache/R/lintr
+          key: lintr-${{ steps.lintr-version.outputs.version }}
+
+      - name: Run lint package
+        shell: Rscript {0}
+        env:
+          LINTR_ERROR_ON_LINT: true
+        run: |
+          pkgload::load_all()
+          library(testthat)
+          lintr::lint_package(cache = TRUE)
